--- a/saved.html
+++ b/saved.html
@@ -97,44 +97,61 @@
 
     <input type="text" id="searchBar" placeholder="Search playlists...">
 
-      <div id="playlist-container">
-            <div class="playlist" data-title="My Personal Favourites">
-                <iframe src="https://open.spotify.com/embed/playlist/1tMM5U1mNVGaJtJHhA1hxS?utm_source=generator" allow="encrypted-media"></iframe>
-            </div>
-            <div class="playlist" data-title="Phonky Town">
-                <iframe src="https://open.spotify.com/embed/playlist/6D9iKgct00yW14xgWEsutb?utm_source=generator&theme=0" allow="encrypted-media"></iframe>
-            </div>
-            <div class="playlist" data-title="日本語 Bangers">
-                <iframe src="https://open.spotify.com/embed/playlist/6QSXVRNZnESvVK67Sa322H?utm_source=generator" allow="encrypted-media"></iframe>
-            </div>
-            <div class="playlist" data-title="In My Feeling">
-                <iframe src="https://open.spotify.com/embed/playlist/4e8oXQNPCn3O2qZTKPH6yF?utm_source=generator" allow="encrypted-media"></iframe>
-            </div>
-            <div class="playlist" data-title="In Love">
-                <iframe src="https://open.spotify.com/embed/playlist/2qpM7Bybl1Gw7SMTlCzOui?utm_source=generator" allow="encrypted-media"></iframe>
-            </div>
-            <div class="playlist" data-title="Sad But Will Be Okay">
-                <iframe src="https://open.spotify.com/embed/playlist/52W53cJxb28VI4Cki3oDs4?utm_source=generator" allow="encrypted-media"></iframe>
-            </div>
-            <div class="playlist" data-title="Attack on Titan - Anime Favs">
-                <iframe src="https://open.spotify.com/embed/playlist/2fDVtXDt8aKhtEScNEDxOp?utm_source=generator" allow="encrypted-media"></iframe>
-            </div>
-            <div class="playlist" data-title="My Korean Pops">
-                <iframe src="https://open.spotify.com/embed/playlist/47CQ7ik32Dha3nxuzOza76?utm_source=generator" allow="encrypted-media"></iframe>
-            </div>
-            <div class="playlist" data-title="Oldies but Goldies">
-                <iframe src="https://open.spotify.com/embed/playlist/7u52QeDnyddtXe8mEpyled?utm_source=generator" allow="encrypted-media"></iframe>
-            </div>
-            <div class="playlist" data-title="Pop All the Way">
-                <iframe src="https://open.spotify.com/embed/playlist/53WCieQbZoo4SJHy1q3o3d?utm_source=generator" allow="encrypted-media"></iframe>
-            </div>
-            <div class="playlist" data-title="Scream All the Way">
-                <iframe src="https://open.spotify.com/embed/playlist/4M57AXXgBvwmzONhviaz0A?utm_source=generator" allow="encrypted-media"></iframe>
-            </div>
-            <div class="playlist" data-title="Mood Swing">
-                <iframe src="https://open.spotify.com/embed/playlist/54dhRUnaW8rHOYjhqRWX6R?utm_source=generator" allow="encrypted-media"></iframe>
-            </div>
-        </div>
+      <div class="playlist-item" data-title="my personal favourites">
+  <p class="playlist-title">My Personal Favourites</p>
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1tMM5U1mNVGaJtJHhA1hxS?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+</div>
+
+<div class="playlist-item" data-title="phonky town">
+  <p class="playlist-title">Phonky Town</p>
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6D9iKgct00yW14xgWEsutb?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+</div>
+
+<div class="playlist-item" data-title="日本語 bangers japanese">
+  <p class="playlist-title">日本語 Bangers</p>
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6QSXVRNZnESvVK67Sa322H?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+</div>
+
+<div class="playlist-item" data-title="in my feelings">
+  <p class="playlist-title">In My Feelings</p>
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4e8oXQNPCn3O2qZTKPH6yF?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+</div>
+
+<div class="playlist-item" data-title="in love">
+  <p class="playlist-title">In Love</p>
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2qpM7Bybl1Gw7SMTlCzOui?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+</div>
+
+<div class="playlist-item" data-title="sad but will be okay">
+  <p class="playlist-title">Sad but Will Be Okay</p>
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/52W53cJxb28VI4Cki3oDs4?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+</div>
+
+<div class="playlist-item" data-title="attack on titan anime favs">
+  <p class="playlist-title">Attack on Titan - Anime Favs</p>
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2fDVtXDt8aKhtEScNEDxOp?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+</div>
+
+<div class="playlist-item" data-title="my korean pops kpop">
+  <p class="playlist-title">My Korean Pops</p>
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/47CQ7ik32Dha3nxuzOza76?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+</div>
+
+<div class="playlist-item" data-title="oldies but goldies retro classics">
+  <p class="playlist-title">Oldies but Goldies</p>
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/7u52QeDnyddtXe8mEpyled?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+</div>
+
+<div class="playlist-item" data-title="pop all the way pop">
+  <p class="playlist-title">Pop All the Way</p>
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/53WCieQbZoo4SJHy1q3o3d?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+</div>
+
+<div class="playlist-item" data-title="scream all the way rock metal loud">
+  <p class="playlist-title">Scream All the Way</p>
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4M57AXXgBvwmzONhviaz0A?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+</div>
+
    </section>
     
   <script>
